# demo-python-fastapi-websocket

./: README.md  main.py  pyproject.toml  requirements.txt
templates/: index.html
